fix tab scrollbar behavior
overflow: overlay seems to no longer work in recent version of Chromium

--- a/css/tabBar.css
+++ b/css/tabBar.css
@@ -88,8 +88,8 @@ body:not(.windows) #menu-button {
 #navbar #tabs {
 	display: flex;
 	flex: 1;
-	/* https://github.com/w3c/csswg-drafts/issues/92 - don't make the scrollbar height affect the layout */
-	overflow: overlay;
+	overflow-x: auto;
+	overflow-y: hidden;
 }
 body.is-edit-mode #navbar #tabs {
 	overflow: hidden;
